# lenna-gui

./: .gitignore  README.md  package.json
.github/workflows/: publish.yml
src/: App.vue  main.js
src-tauri/: Cargo.toml  lenna.yml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: FileUpload.vue  ImagePreview.vue  ImageUpload.vue  Plugin.vue  PluginConfig.vue  PluginsManager.vue
src/views/: Home.vue
