[package]
name = "lenna-gui"
version = "0.1.0"
description = "Lenna Tauri App"
authors = ["Christian <chriamue@gmail.com>"]
license = "MIT"
repository = "https://github.com/lenna-project/lenna-gui"
default-run = "lenna-gui"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
base64 = "0.13"
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "ico", "gif"] }
semver = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tauri = { version = "1.0.4", features = ["api-all"] }
scraper = "0.13.0"
lenna_core = { version = "0.3", git = "https://github.com/lenna-project/lenna-core", branch = "main" }
lenna_cli = { version = "0.3", features = [
    "libloading",
], git = "https://github.com/lenna-project/lenna-cli", branch = "main" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
